--- a/index.html
+++ b/index.html
@@ -3,19 +3,8 @@
     <div id="myBoard" style="width: 400px"></div>
     <p id="gameStatus"></p>
   </body>
-<!-- <link rel="stylesheet" href="node_modules/@chrisoakman/chessboardjs/dist/chessboard-1.0.0.min.css"> -->
-    <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> -->
-    <!-- <script src="node_modules/@chrisoakman/chessboardjs/dist/chessboard-1.0.0.min.js"></script> -->
-<!-- add stylesheet via CDN: -->
-<link rel="stylesheet"
-      href="https://unpkg.com/@chrisoakman/chessboard2@0.5.0/dist/chessboard2.min.css"
-      integrity="sha384-47VeTDpmy4yT21gKPXQcLQYQZwlmz27gEH5NTrOmTk3G/SGvMyltclOW/Q8uE+sL"
-      crossorigin="anonymous">
-
-<!-- add JS via CDN: -->
-<script src="https://unpkg.com/@chrisoakman/chessboard2@0.5.0/dist/chessboard2.min.js"
-        integrity="sha384-/KwQCjA1GWovZNV3QDVtvSMDzO4reGgarF/RqHipr7hIUElH3r5zNl9WEPPOBRIF"
-        crossorigin="anonymous"></script>
-  <!-- <link rel="stylesheet" href="./node_modules/cm-chessboard/assets/styles/cm-chessboard.css"> -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <link rel="stylesheet" href="./css/chessboard-1.0.0.min.css">
+  <script src="./js/chessboard-1.0.0.min.js"></script>
   <script src="bundle.js"></script>
 </html>
